@@ -2,6 +2,10 @@
 CHANGE LOG
 =========================================================================
 
+2007-05-01  Warren L. DeLano <warren@delsci.com>
+
+	* threads limit increased to 32 
+	
 2007-04-30  Warren L. DeLano <warren@delsci.com>
 
 	* starting to eliminate global Python state
